Add runnable examples in 10 languages + Quick Start
Anyone can now clone this repo, install the runtime, and run a CUDA
proof in C, Go, Java, Swift, C#, Zig, Julia, Rust, Python, or
TypeScript. Each example loads the dylib via its language's FFI and
tests device discovery, memory ops, streams/events, cuBLAS, and
bandwidth.

README updated with Quick Start section, cargo/pip/npm install
options, and a language table linking to all 10 examples.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>